# iPuppy-Notebooks

./: .gitignore  .puppy_rules  .puppy_session_memory.json  README.md  fourier_pupform.py  index.html  package-lock.json  package.json  pupper.py  puppy_test.py  pyproject.toml  tailwind.config.js  vite.config.js  vite.config.ts
.github/workflows/: publish.yml  quality.yml
ipuppy_notebooks/: __init__.py  conversation_history.py  frontend_operations.py  main.py  py_notebook.py  socket_handlers.py  test_frontend_operations.py
ipuppy_notebooks/agent/: agent.py  prompts.py  tools.py
ipuppy_notebooks/kernels/: executor.py  manager.py
ipuppy_notebooks/notebooks/: test_notebook.py
ipuppy_notebooks/static/css/: style.css
ipuppy_notebooks/static/js/: main.js
ipuppy_notebooks/templates/: base.html  index.html
public/: index.html  styles.css
src/: App.tsx  codePuppyClient.js  index.css  notebookManager.js  server.js  shims.d.ts
src/components/: DebugModal.tsx  Header.tsx  NotebookCell.tsx  NotebookContainer.tsx  Sidebar.tsx  index.ts  types.ts
src/lib/: api.js  fileCompletion.ts  tabHandler.ts
