[project]
name = "ipuppy-notebooks"
version = "0.1.0"
description = "A FastAPI-based notebook server with iPuppy integration"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
    "ipykernel>=6.0.0",
    "jupyter-client>=7.0.0",
    "notebook>=6.4.0",
    "python-multipart>=0.0.5",
    "aiofiles>=0.7.0",
    "websockets>=10.0",
    "python-socketio>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["main.py", "README.md"]

[tool.uv]
managed = true
