[project]
name = "ipuppy-notebooks"
version = "0.1.3"
description = "ðŸ¶ Agentic AI-Empowered Data Science Notebooks - A revolutionary notebook environment combining Jupyter-style computing with autonomous AI assistance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael Pfaffenberger", email = "michael@example.com"}
]
keywords = ["jupyter", "notebook", "ai", "agent", "data-science", "fastapi", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
    "ipykernel>=6.0.0",
    "jupyter-client>=7.0.0",
    "notebook>=6.4.0",
    "python-multipart>=0.0.5",
    "aiofiles>=0.7.0",
    "websockets>=10.0",
    "python-socketio>=5.13.0",
    "code-puppy>=0.0.77",
    "pydantic-ai>=0.0.1",
]

[project.scripts]
ipuppy-notebooks = "ipuppy_notebooks.main:main"
ipuppy = "ipuppy_notebooks.main:main"

[project.urls]
Homepage = "https://github.com/your-username/iPuppy-Notebooks"
Repository = "https://github.com/your-username/iPuppy-Notebooks"
Documentation = "https://github.com/your-username/iPuppy-Notebooks#readme"
"Bug Tracker" = "https://github.com/your-username/iPuppy-Notebooks/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipuppy_notebooks"]
include = ["ipuppy_notebooks/compiled_ui/**"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "README.md"
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.sdist]
include = [
    "ipuppy_notebooks/",
    "src/",
    "public/",
    "package.json",
    "package-lock.json",
    "vite.config.ts",
    "vite.config.js",
    "tsconfig*.json",
    "index.html",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "**/*.html",
    "**/*.js"
]

[tool.uv]
managed = true
